force-app/main/default/objects/CourseCalendarStaging__c/CourseCalendarStaging__c.object-meta.xml
<CustomObject>
    <label>Temporal Calendario Curso</label>
    <nameField>
        <label>Temporal Calendario Cursos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Calendario Cursos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>