force-app/main/default/objects/CourseCalendarStaging__c/fields/Benefit_Name__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Name__c</fullName>
    <label>Benefit_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>