force-app/main/default/objects/CourseCalendarStaging__c/fields/Benefit_Parent_Benefit_c__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Parent_Benefit_c__c</fullName>
    <label>Benefit_Parent_Benefit__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>