force-app/main/default/objects/CourseCalendarStaging__c/fields/BenefitId__c.field-meta.xml
<CustomField>
    <fullName>BenefitId__c</fullName>
    <label>BenefitId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>