force-app/main/default/objects/CourseCalendarStaging__c/fields/BenefitScheduledId__c.field-meta.xml
<CustomField>
    <fullName>BenefitScheduledId__c</fullName>
    <label>BenefitScheduledId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>