force-app/main/default/objects/CourseCalendarStaging__c/fields/BenefitScheduleName__c.field-meta.xml
<CustomField>
    <fullName>BenefitScheduleName__c</fullName>
    <label>BenefitScheduleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>