force-app/main/default/objects/CourseCalendarStaging__c/fields/FirstSessionEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>FirstSessionEndDateTime__c</fullName>
    <label>FirstSessionEndDateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>