force-app/main/default/objects/CourseCalendarStaging__c/fields/FirstSessionStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>FirstSessionStartDateTime__c</fullName>
    <label>FirstSessionStartDateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>