force-app/main/default/objects/CourseCalendarStaging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BenefitScheduledId__c</columns>
    <columns>Benefit_Parent_Benefit_c__c</columns>
    <columns>Benefit_Name__c</columns>
    <columns>BenefitId__c</columns>
    <columns>BenefitScheduleName__c</columns>
    <columns>FirstSessionStartDateTime__c</columns>
    <columns>FirstSessionEndDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>